--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -2,8 +2,24 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:controls="clr-namespace:MahApps.Metro.Controls;assembly=MahApps.Metro"
-        Title="Stoneharry's Spell Editor V2" Height="450" Width="825">
+        Title="Stoneharry's Spell Editor V2" Height="450" Width="825" ResizeMode="CanMinimize" WindowStartupLocation="CenterScreen">
     <Grid>
         
     </Grid>
+
+    <controls:MetroWindow.WindowCommands>
+        <controls:WindowCommands>
+            <Button x:Name="SaveToDBC" Click="SaveToNewDBC">
+                <StackPanel Orientation="Horizontal">
+                    <Rectangle Width="20" Height="20" Fill="{Binding RelativeSource={RelativeSource AncestorType=Button}, Path=Foreground}">
+                        <Rectangle.OpacityMask>
+                            <VisualBrush Stretch="Fill" Visual="{StaticResource appbar_archive}" />
+                        </Rectangle.OpacityMask>
+                    </Rectangle>
+                    <TextBlock Margin="4 0 0 0" VerticalAlignment="Center" Text="Save To New DBC File" />
+                </StackPanel>
+            </Button>
+        </controls:WindowCommands>
+    </controls:MetroWindow.WindowCommands>
+
 </controls:MetroWindow>
