--- a/SpellGUIV2/App.xaml
+++ b/SpellGUIV2/App.xaml
@@ -10,7 +10,10 @@
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Colors.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/Blue.xaml" />
                 <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Accents/BaseDark.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/MahApps.Metro;component/Styles/Controls.AnimatedSingleRowTabControl.xaml" />
+                <!--
                 <ResourceDictionary Source="/Resources/Icons.xaml" />
+                -->       
             </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
