--- a/SpellGUIV2/MainWindow.xaml
+++ b/SpellGUIV2/MainWindow.xaml
@@ -153,7 +153,7 @@
                     </TabControl>
                     <Label Content="Category" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
                     <TextBox Name="CategoryTxt" HorizontalAlignment="Left" Height="23" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="125"/>
-                    <Button Content="Save Spell Changes" HorizontalAlignment="Left" Margin="306,379,0,0" VerticalAlignment="Top" Width="170" Click="Button_Click"/>
+                    <Button Content="Save Spell Changes" HorizontalAlignment="Left" Margin="615,374,0,0" VerticalAlignment="Top" Width="170" Click="Button_Click"/>
                     <Label Content="Dispel Type" HorizontalAlignment="Left" Margin="10,72,0,0" VerticalAlignment="Top"/>
                     <ComboBox Name="DispelType" HorizontalAlignment="Left" Margin="10,103,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="DispelType_SelectionChanged"/>
                     <Label Content="Mechanic Type" HorizontalAlignment="Left" Margin="10,134,0,0" VerticalAlignment="Top"/>
@@ -165,19 +165,43 @@
                     <Label Content="Spell Level" HorizontalAlignment="Left" Margin="140,10,0,0" VerticalAlignment="Top"/>
                     <TextBox Name="SpellLevel" HorizontalAlignment="Left" Height="23" Margin="140,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
                     <Label Content="Base Level" HorizontalAlignment="Left" Margin="140,70,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="BaseLevel" HorizontalAlignment="Left" Height="23" Margin="140,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <TextBox Name="BaseLevel" HorizontalAlignment="Left" Height="23" Margin="140,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
                     <Label Content="Max Level" HorizontalAlignment="Left" Margin="140,134,0,0" VerticalAlignment="Top"/>
                     <TextBox Name="MaxLevel" HorizontalAlignment="Left" Height="23" Margin="140,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
                     <Label Content="Spell Visual 1" HorizontalAlignment="Left" Margin="140,196,0,0" VerticalAlignment="Top"/>
                     <TextBox Name="SpellVisual1" HorizontalAlignment="Left" Height="23" Margin="140,227,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
-                    <Label Content="Spell Visual 2" HorizontalAlignment="Left" Margin="225,9,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="SpellVisual2" HorizontalAlignment="Left" Height="23" Margin="225,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
-                    <Label Content="Recovery Time" HorizontalAlignment="Left" Margin="225,70,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="RecoveryTime" HorizontalAlignment="Left" Height="23" Margin="225,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
-                    <Label Content="Category Recovery Time" HorizontalAlignment="Left" Margin="225,134,0,0" VerticalAlignment="Top"/>
-                    <TextBox Name="CategoryRecoveryTime" HorizontalAlignment="Left" Height="23" Margin="225,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Spell Visual 2" HorizontalAlignment="Left" Margin="140,258,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="SpellVisual2" HorizontalAlignment="Left" Height="23" Margin="140,289,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Recovery Time" HorizontalAlignment="Left" Margin="225,10,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="RecoveryTime" HorizontalAlignment="Left" Height="23" Margin="225,40,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Category Recovery Time" HorizontalAlignment="Left" Margin="225,70,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="CategoryRecoveryTime" HorizontalAlignment="Left" Height="23" Margin="225,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
                     <Label Content="Range" HorizontalAlignment="Left" Margin="10,320,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.537,0.192"/>
                     <ComboBox Name="SpellRange" HorizontalAlignment="Left" Margin="10,351,0,0" VerticalAlignment="Top" Width="125" SelectionChanged="SpellRange_SelectionChanged"/>
+                    <Label Content="Power Type" HorizontalAlignment="Left" Margin="368,10,0,0" VerticalAlignment="Top"/>
+                    <ComboBox Name="PowerType" HorizontalAlignment="Left" Margin="368,41,0,0" VerticalAlignment="Top" Width="125"/>
+                    <Label Content="Mana Cost" HorizontalAlignment="Left" Margin="368,70,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="ManaCost" HorizontalAlignment="Left" Height="23" Margin="368,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Mana Cost Per Level" HorizontalAlignment="Left" Margin="368,134,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="ManaCostPerLevel" HorizontalAlignment="Left" Height="23" Margin="368,165,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Mana Cost Per Second" HorizontalAlignment="Left" Margin="368,196,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="ManaCostPerSecond" HorizontalAlignment="Left" Height="23" Margin="368,227,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Per Second Per Level" HorizontalAlignment="Left" Margin="368,258,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="PerSecondPerLevel" HorizontalAlignment="Left" Height="23" Margin="368,289,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="Mana Cost %" HorizontalAlignment="Left" Margin="368,320,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="ManaCostPercent" HorizontalAlignment="Left" Height="23" Margin="368,351,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="MaxTargets" HorizontalAlignment="Left" Margin="498,72,0,0" VerticalAlignment="Top"/>
+                    <Label Content="SpellFamilyName" HorizontalAlignment="Left" Margin="498,10,0,0" VerticalAlignment="Top"/>
+                    <TextBox Name="SpellFamilyName" HorizontalAlignment="Left" Height="23" Margin="498,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <TextBox Name="MaxTargets" HorizontalAlignment="Left" Height="23" Margin="498,103,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80"/>
+                    <Label Content="School" HorizontalAlignment="Left" Margin="498,134,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S1" Content="School Physical" HorizontalAlignment="Left" Margin="498,165,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S2" Content="School Holy" HorizontalAlignment="Left" Margin="498,188,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S3" Content="School Fire" HorizontalAlignment="Left" Margin="498,211,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S4" Content="School Nature" HorizontalAlignment="Left" Margin="498,234,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S5" Content="School Frost" HorizontalAlignment="Left" Margin="498,257,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S6" Content="School Shadow" HorizontalAlignment="Left" Margin="498,280,0,0" VerticalAlignment="Top"/>
+                    <CheckBox Name="S7" Content="School Arcane" HorizontalAlignment="Left" Margin="498,303,0,0" VerticalAlignment="Top"/>
                 </Grid>
             </TabItem>
             <TabItem Header="Icon Editor">
